[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_repo_tomo"
version = "0.0.1"
authors = [
  { name="Tomooo Tomo", email="tomo@tomo.tomo" },
]
description = "A small Tomo package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tommac1/test_repo"
Issues = "https://github.com/Tommac1/test_repo"
