[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_repo"
version = "0.0.1"
authors = [{ name="Tomooo Tomo", email="tomo@tomo.tomo" }]
description = "A small Tomo package"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["testing", "experimental", "github"]
dependencies = ["pytest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tommac1/test_repo"
Issues = "https://github.com/Tommac1/test_repo"

[project.scripts]
test_repo = "test_repo.test_repo:main"